--- a/game/css/style.css
+++ b/game/css/style.css
@@ -1,25 +1,52 @@
-.container h2 {
-    font-size: 20px;
-    font-weight: bold;
-}
-.card {
-    background: cornflowerblue;
-    justify-content: center;
-    margin: 0 auto;
-    width: 90%;
+body {
+    font: normal Arial;
 }
 
-.selecao {
-    background-color: darkgray;
+body background {
+    opacity: 1%;
+}
+
+h1 {
+    background-color: black;
+    font-size: xx-large;
+    color: white;
+    margin-top: 30px;
+    text-align: center;
+}
+
+h2 {
+    font-size: x-large;
+    margin: 30px;
+    text-align: center;
+
+}
+
+.box-pergunta{
     display: flex;
     justify-content: center;
+    margin-top: 30px;
+    margin-right: auto;
+    margin-left: auto;
+    border-radius: 20px;
+    background-color: white;
+    width: 70%;
+    height: 200px;
+} 
+
+button {
+    display: flex;
+    justify-content: center;
+    align-self: end;
 }
 
-.selecao input {
-    margin-right: 10px;
+.box-resposta{
+    display: flex;
+    justify-content: center;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-left: auto;
+    border-radius: 20px;
+    background-color: white;
+    width: 70%;
+    height: 100px;
 }
-
-.selecao button {
-    margin-left: 30px;
-}
-
