--- a/game/css/style.css
+++ b/game/css/style.css
@@ -1,19 +1,30 @@
 * {
-    font: normal Arial;
+    font-family: 'Open Sans', sans-serif;
+
 }
+
 h1 {
     background-color: black;
-    font-size: xx-large;
+    font-family: 'Special Elite', cursive;
+    font-size: 30pt;
     color: white;
     margin-top: 30px;
     text-align: center;
 }
 
 h2 {
-    font-size: x-large;
-    margin: 30px;
+    font-size: 500;
+    margin: 20px 20px 0 20px;
     text-align: center;
 }
+
+#gif {
+    display: flex;
+    width: 300px;
+    margin: 10px 0;
+}
+
+
 
 #box {
     display: flex;
@@ -39,6 +50,7 @@ h2 {
     width: 100px;
     height: 40px;
     border-radius: 8px;
+    margin-top: 30px;
     margin-bottom: 30px;
     margin-right: 15px;
     margin-left: 10px;
